# vitemaprog

./: .env.exemple  .gitignore  README.md  alembic.ini  pyproject.toml  seeder_run.py  test.py
migrations/: env.py
migrations/versions/: 11d5e408b98d_create_user_model.py  7375613981f9_add_updated_at_user_model_create_rights.py  74b6803d2e05_update_relation_rights_users.py  afaf471a233d_create_role.py  e583b1afbe0d_add_role_uuid_to_users.py
tests/: test_vitemaprog.py
vitemaprog/: __init__.py  db.py  main.py
vitemaprog/controllers/: __init__.py  user_controller.py
vitemaprog/database/: __init__.py  base_model.py  db.py
vitemaprog/database/seeders/: __init__.py  rights_seeder.py  roles_seeder.py  seeder_interface.py
vitemaprog/exeptions/: __init__.py  configuration_exception.py  model_already_exists_exception.py  model_not_found_exception.py  validation_exception.py
vitemaprog/models/: __init__.py  user.py
vitemaprog/models/auth/: __init__.py  right_model.py  role_model.py  user_model.py
vitemaprog/requests/: __init__.py  right_request.py  role_request.py  user_request.py
vitemaprog/routers/: __init__.py  api.py
