[tool.poetry]
name = "viteMaProg"
version = "0.1.0"
description = ""
authors = ["François BOUYER <francois@oniti.fr>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.1"
alembic = "^1.7.7"
SQLAlchemy = "^1.4.35"
python-dotenv = "^0.20.0"
pydantic = {extras = ["email"], version = "^1.9.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
